# bsns-ssh

./: .gitignore  LICENSE  PRIVACY.md  Package.swift  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md
Sources/BsnsSSHCore/: Agent.swift  CBOR.swift  FileKey.swift  ImportParsers.swift  KeyBackend.swift  KnownHosts.swift  MoshConnect.swift  RSAKeySupport.swift  RSAPrivateKeyDER.swift  SSHDecoder.swift  SSHKeyFormat.swift  SSHWire.swift  SecureEnclaveKey.swift  WebAuthnSignature.swift
Tests/BsnsSSHCoreTests/: AgentTests.swift  FileKeyTests.swift  ImportParsersTests.swift  KnownHostsTests.swift  MoshConnectTests.swift  RSAImportTests.swift  RSAKeyTests.swift  SSHDecoderTests.swift  SSHWireTests.swift  WebAuthnSignatureTests.swift
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  gradle.lockfile  proguard-rules.pro
android/core/: build.gradle.kts  gradle.lockfile
android/jni/: build-libssh2.sh  build-mosh.sh
android/jni/mosh/: config.h
android/jni/spike/: ssh_spike.c
android/scripts/: submit-play.sh
android/terminal-emulator/: build.gradle.kts  gradle.lockfile
android/terminal-view/: build.gradle.kts  gradle.lockfile
android/transport/: build.gradle.kts  gradle.lockfile
android/transport/src/main/cpp/: CMakeLists.txt  mosh_bridge.cpp  sshbridge.c
app/: project.yml
app/Sources/: AgentStore.swift  BsnsSSHApp.swift  ConnectView.swift  DiagLog.swift  HardwareKeyboardMonitor.swift  InstallKeyView.swift  KeysView.swift  LiveTerminalScreen.swift  PortForwardsView.swift  PublicKeyText.swift  RootView.swift  SFTPBrowserView.swift  TerminalHelpView.swift  TerminalKeyBar.swift  TerminalScreen.swift  TerminalTheme.swift  Theme.swift
app/Sources/FIDO/: Fido2Coordinator.swift  Fido2SecurityKey.swift
app/Sources/Mosh/: MoshBootstrap.swift  MoshSession.swift
app/Sources/Session/: SessionRestoreStore.swift  SessionStore.swift  TerminalSession.swift  TerminalSurface.swift  TerminalTransport.swift
app/scripts/: bsns-wordmark.json  make-icon.swift
docs/: ARCHITECTURE.md  accessibility.md  android-parity.md  android-play-release.md  android-port.md  launch-checklist.md  mosh.md  no-telemetry-evidence-2026-06-16.md  no-telemetry-verification.md  store-listing.md
fixtures/: config-bundle-cross-platform.md
licenses/: README.md  bouncycastle-1.78.1-LICENSE.txt
spikes/: README.md
spikes/libssh2-signcb/: Package.swift  run-agent.sh  run.sh
(+88 files in other folders)
